# csc299-project

./: README.md  SUMMARY.md  comms.md  pyproject.toml
src/campus_connect_portal/: __init__.py  config.py  llm.py  storage.py
src/campus_connect_portal/sample_data/: __init__.py  campus_connect_sample.json
tasks1/: PLAN.md  README.md
tasks1/source/docs/: PROJECT_PLAN.md
tasks2/: PLAN.md  README.md
tasks2/source/src/campus_connect_portal/: models.py  pkms.py  tasks.py
tasks3/: PLAN.md  README.md
tasks3/source/docs/: USAGE.md
tasks3/source/src/campus_connect_portal/: cli.py
tasks4/: PLAN.md  README.md
tasks4/source/src/campus_connect_portal/: agents.py  chat.py
tasks5/: PLAN.md  README.md
tasks5/source/docs/: MOBILE_LOGIN_MOCK.md
